@@ -1,0 +1,11 @@
+use strict;
+use warnings;
+package MooseyRole;
+
+use Moose::Role;
+use Scalar::Util 'reftype';
+use namespace::clean;
+
+sub role_stuff {}
+
+1;
