@@ -1,0 +1,11 @@
+use strict;
+use warnings;
+package MooyRole;
+
+use Scalar::Util 'reftype';
+use Moo::Role;  # order is significant here
+use namespace::clean;
+
+sub role_stuff {}
+
+1;
