@@ -1,0 +1,9 @@
+use strict;
+use warnings;
+package Role;
+
+use Role::Tiny;
+
+sub child_stuff {}
+
+1;
