@@ -3,28 +3,12 @@ use warnings;
 
 use Test::Tester;
 use Test::More;
-use Test::Requires 'Moo';
+use Test::Requires 'Role::Tiny';
 use Test::CleanNamespaces;
 
 use lib 't/lib';
 
-foreach my $package (qw(MooyDirty))
-{
-    my (undef, @results) = run_tests(sub { namespaces_clean($package) });
-    cmp_results(
-        \@results,
-        [ {
-            ok => 0,
-            name => $package . ' contains no imported functions',
-        } ],
-        $package . ' has an unclean namespace',
-    );
-    diag 'got result: ', explain(\@results) if not Test::Builder->new->is_passing;
-
-    ok($package->can('refaddr'), 'refaddr import still available');
-}
-
-foreach my $package (qw(MooyClean MooyRole MooyComposer))
+foreach my $package (qw(Role Composer))
 {
     my (undef, @results) = run_tests(sub { namespaces_clean($package) });
     cmp_results(
