@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - remove test prereqs that are meant to be optional (added in v0.06)
+  - fix handling of subs composed from a role (Moose::Role, Moo::Role,
+    Mouse::Role, and Role::Tiny), broken in v0.06
 
 0.06      2014-03-01 19:14:39Z
   - lots more tests
